Подключение и стилизация шрифтов (часть 2)

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,19 @@
-@import "text.less";
-
-body {
-  background: #ffffff;
-}
+@import "blocks/normalize.less";
+@import "blocks/general.less";
+@import "blocks/variables.less";
+@import "blocks/mixins.less";
+@import "blocks/text.less";
+@import "blocks/button.less";
+@import "blocks/page-header.less";
+@import "blocks/main-navigation.less";
+@import "blocks/promo.less";
+@import "blocks/programs.less";
+@import "blocks/example.less";
+@import "blocks/before-after.less";
+@import "blocks/contacts.less";
+@import "blocks/copyright.less";
+@import "blocks/catalog-main.less";
+@import "blocks/show-more.less";
+@import "blocks/catalog-additional.less";
+@import "blocks/present.less";
+@import "blocks/form.less";
