Добавляет базовую стилизацию

--- a/source/less/blocks/catalog-additional.less
+++ b/source/less/blocks/catalog-additional.less
@@ -1,3 +1,12 @@
+.catalog-additional {
+  .set-padding(25px, 20px, 25px, 20px);
+  .outline(violet);
+}
+
+.catalog-additional__list {
+  .list-reset();
+}
+
 .catalog-additional__item-title {
   color: #222222;
   line-height: 16px;
