--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,3 +1,12 @@
+.example {
+  .set-padding(22px, 20px, 22px, 20px);
+  .outline(green);
+}
+
+.example__statistics-list {
+  .list-reset();
+}
+
 .example__statistics-value {
   line-height: 24px;
 }
@@ -5,7 +14,7 @@
 .example__statistics-text {
   .set-font-size(12px);
   line-height: 12px;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
 
 .example__expenses {
