--- a/source/less/blocks/general.less
+++ b/source/less/blocks/general.less
@@ -34,8 +34,9 @@ input[type="radio"].visually-hidden {
 }
 
 body {
-  min-width: 320px;
+  width: 320px;
   margin: 0;
+  .centerer();
   padding: 0;
   .set-font-size (14px);
   line-height: 18px;
