--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,3 +1,12 @@
+.promo {
+  width: 100%;
+  min-height: 480px;
+  .set-padding(0, 20px, 0, 20px);
+  background-image: url("../../img/index-background-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  .outline(red);
+}
+
 .promo__title {
   line-height: 36px;
   color: @set-color-white;
