--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -1,3 +1,8 @@
+.show-more {
+  .set-padding(25px, 20px, 25px, 20px);
+  .outline(orange);
+}
+
 .show-more__title {
   line-height: 20px;
 }
@@ -9,4 +14,5 @@
 
 .show-more__button {
   color: #222222;
+  background-color: @set-bg-grey;
 }
