--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,12 +8,17 @@
 @import "blocks/main-navigation.less";
 @import "blocks/promo.less";
 @import "blocks/programs.less";
+@import "blocks/process.less";
 @import "blocks/example.less";
 @import "blocks/before-after.less";
+@import "blocks/page-footer.less";
 @import "blocks/contacts.less";
+@import "blocks/map.less";
 @import "blocks/copyright.less";
+@import "blocks/socials.less";
 @import "blocks/catalog-main.less";
 @import "blocks/show-more.less";
 @import "blocks/catalog-additional.less";
 @import "blocks/present.less";
 @import "blocks/form.less";
+
