--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -1,3 +1,16 @@
+.catalog-main {
+  .outline(red);
+}
+
+.catalog-main__list {
+  .list-reset();
+}
+
+.catalog-main__item {
+  .set-padding(25px, 20px, 25px, 20px);
+  .outline(blue);
+}
+
 .catalog-main__item-title {
   line-height: 20px;
 }
@@ -6,3 +19,4 @@
   .set-font-size(12px);
   line-height: 16px;
 }
+
