--- a/source/less/blocks/mixins.less
+++ b/source/less/blocks/mixins.less
@@ -21,3 +21,32 @@
 }
 
 //
+
+.centerer() {
+  margin: 0 auto;
+}
+
+.set-padding (@padding-top, @padding-right, @padding-bottom, @padding-left){
+  padding-top: @padding-top;
+  padding-right: @padding-right;
+  padding-bottom: @padding-bottom;
+  padding-left: @padding-left;
+}
+
+.set-margin (@margin-top, @margin-right, @margin-bottom, @margin-left){
+  margin-top: @margin-top;
+  margin-right: @margin-right;
+  margin-bottom: @margin-bottom;
+  margin-left: @margin-left;
+}
+
+.outline(@outline-color) {
+  outline: 1px solid @outline-color;
+}
+
+.list-reset() {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
