Правит стиль кода

--- a/source/less/blocks/general.less
+++ b/source/less/blocks/general.less
@@ -1,10 +1,10 @@
-html{
+html {
   box-sizing: border-box;
 }
 
 *,
 *::before,
-*::after{
+*::after {
   box-sizing: inherit;
 }
 
@@ -18,7 +18,7 @@ a {
   color: @set-color-main;
 }
 
-.visually-hidden:not(:focus):not(active),
+.visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
   position: absolute;
