--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,4 +1,4 @@
 .map {
   height: 362px;
-  background-image: url("../../img/map-background.jpg");
+  background-image: url("../img/map-background.jpg");
 }
