--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -5,7 +5,7 @@
 
 .present-wrapper {
   height: 289px;
-  background-image: url("../../img/gift-photo-mobile@1x.jpg");
+  background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
 }
 
