--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -2,7 +2,7 @@
   width: 100%;
   min-height: 480px;
   .set-padding(0, 20px, 0, 20px);
-  background-image: url("../../img/index-background-mobile@1x.jpg");
+  background-image: url("../img/index-background-mobile@1x.jpg");
   background-repeat: no-repeat;
   .outline(red);
 }
