--- a/source/less/blocks/text.less
+++ b/source/less/blocks/text.less
@@ -19,7 +19,7 @@
   text-transform: uppercase;
 
   &--title {
-    .set-font-size (title;14px);
+    .set-font-size (title,14px);
     line-height: 60px;
   }
 
