Сетки и микросетки для главной в мобильной и планшетной версии

--- a/source/less/blocks/before-after.less
+++ b/source/less/blocks/before-after.less
@@ -1,3 +1,28 @@
+.before-after {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .set-padding(12px, 0, 12px, 8px);
+}
+
 .before-after__text {
   line-height: 20px;
+}
+
+.before-after__switch {
+  display: flex;
+  align-items: center;
+  .set-margin(0, 19px, 0, 17px);
+  .set-padding(4px; 4px; 4px; 4px);
+  width: 84px;
+  height: 14px;
+  border-radius: 7px;
+  border: 1px solid #d9d9d9;
+}
+
+.before-after__switch-on {
+  width: 34px;
+  height: 6px;
+  border-radius: 5px;
+  background-color: @set-bg-green;
 }
