--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,4 +1,11 @@
 .map {
-  height: 362px;
+  height: 364px;
   background-image: url("../img/map-background.jpg");
+}
+
+@media (min-width: @table-width) {
+  .map {
+    height: 396px;
+    background-image: url("../img/map-background-tablet.jpg");
+  }
 }
