--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,4 +1,27 @@
 .page-header {
-  height: 264px; /*Временно, потом удалить*/
   .outline(violet);
+}
+
+.page-header__top {
+  min-height: 66px;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+@media (min-width: @table-width) {
+  .page-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 110px;
+    .set-padding(10px, 30px, 10px, 30px);
+  }
+
+  .page-header__top {
+    border-bottom: none;
+  }
+
+  .page-header__toggle {
+    display: none;
+  }
+
 }
