--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,4 +1,16 @@
+.copyright {
+  height: 56px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
 .copyright__link {
+  display: block;
   .set-font-size(16px);
   line-height: 16px;
+}
+
+.copyright__logo {
+  display: block;
 }
