--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,4 +1,6 @@
 .promo {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   min-height: 480px;
   .set-padding(0, 20px, 0, 20px);
@@ -8,16 +10,62 @@
 }
 
 .promo__title {
+  padding: 0;
+  .set-margin(27px, 0, 27px, 0);
   line-height: 36px;
   color: @set-color-white;
   text-transform: none;
+  text-align: center;
 }
 
 .promo__slogan {
+  padding: 0;
+  margin: 0;
   line-height: 14px;
   color: @set-color-white;
+  text-align: center;
 }
 
 .promo__button {
+  margin-top: auto;
+  .set-padding(11px, 10px, 11px, 10px);
   line-height: 18px;
+}
+
+
+@media (min-width: @table-width) {
+  .promo {
+    align-items: flex-start;
+    min-height: 840px;
+    .set-padding(0, 30px, 0, 30px);
+    background-image: none;
+  }
+
+  .promo__title {
+    width: 415px;
+    .set-margin(30px, 0, 42px, 87px);
+    color: @set-color-black;
+    line-height: 60px;
+    text-align: left;
+  }
+
+  .promo__slogan {
+    width: 415px;
+    .set-margin(0, 0, 43px, 87px);
+    .set-font-size (20px);
+    line-height: 20px;
+    color: @set-color-black;
+    text-align: left;
+  }
+
+  .promo__image {
+    display: none;
+  }
+
+  .promo__button {
+    margin-top: 0;
+    .set-margin(0, 0, 0, 90px);
+    .set-padding(17px, 27px, 17px, 27px);
+    line-height: 18px;
+  }
 }
