--- a/source/less/blocks/text.less
+++ b/source/less/blocks/text.less
@@ -21,6 +21,7 @@
   &--title {
     .set-font-size (title,14px);
     line-height: 60px;
+    text-transform: none;
   }
 
   &--subtitle {
@@ -31,9 +32,23 @@
   &--bigger {
     .set-font-size (bigger,14px);
   }
+}
 
-  &--menu {
-    font-family: @set-font-family-menu;
+@media (min-width: @table-width) {
+  .text {
     .set-font-size (20px);
+
+    &--title {
+      .set-font-size (60px);
+    }
+
+    &--subtitle {
+      .set-font-size (36px);
+      line-height: 38px;
+    }
+
+    &--bigger {
+      .set-font-size (20px);
+    }
   }
 }
