--- a/source/less/general.less
+++ b/source/less/general.less
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  background-color: #282828;
 }
 
 *,
@@ -44,4 +45,12 @@ body {
   color: @set-color-main;
   font-style: normal;
   background-color: #ffffff;
+}
+
+@media (min-width: @table-width) {
+  body {
+    width: @table-width;
+    .set-font-size (16px);
+    line-height: 24px;
+  }
 }
