--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,7 @@
-@import "blocks/normalize.less";
-@import "blocks/general.less";
-@import "blocks/variables.less";
-@import "blocks/mixins.less";
+@import "normalize.less";
+@import "variables.less";
+@import "mixins.less";
+@import "general.less";
 @import "blocks/text.less";
 @import "blocks/button.less";
 @import "blocks/page-header.less";
