--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -3,9 +3,16 @@
   background-image: url("../img/map-background.jpg");
 }
 
-@media (min-width: @table-width) {
+@media (min-width: @tablet-width) {
   .map {
     height: 396px;
     background-image: url("../img/map-background-tablet.jpg");
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .map {
+    height: 400px;
+    background-image: url("../img/map-background-desktop.jpg");
   }
 }
