--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -7,12 +7,12 @@
   border-bottom: 1px solid #e6e6e6;
 }
 
-@media (min-width: @table-width) {
+@media (min-width: @tablet-width) {
   .page-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 110px;
+    min-height: 110px;
     .set-padding(10px, 30px, 10px, 30px);
   }
 
@@ -23,5 +23,13 @@
   .page-header__toggle {
     display: none;
   }
+}
 
+@media (min-width: @desktop-width) {
+  .page-header {
+    align-items: flex-end;
+    min-height: 120px;
+    .set-padding(10px, 110px, 10px, 110px);
+    background: linear-gradient(to left, @set-bg-green 50%, transparent 40%);
+  }
 }
