--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -6,7 +6,7 @@
   text-align: center;
 }
 
-@media (min-width: @table-width) {
+@media (min-width: @tablet-width) {
   .button {
     width: auto;
   }
