--- a/source/less/blocks/main-navigation.less
+++ b/source/less/blocks/main-navigation.less
@@ -15,7 +15,7 @@
   border-bottom: 1px solid #e6e6e6;
 }
 
-@media (min-width: @table-width) {
+@media (min-width: @tablet-width) {
   .main-navigation__list {
     width: 440px;
     display: flex;
@@ -32,12 +32,28 @@
     border-bottom: 0;
   }
 
-  .main-navigation__link--active:before{
+  .main-navigation__link--active:before {
     content: "";
     position: absolute;
     bottom: -8px;
     width: 100%;
     height: 2px;
     background-color: @set-bg-green;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-navigation__list {
+    width: 480px;
+    .set-padding(0, 0, 10px, 0);
+  }
+
+  .main-navigation__link {
+    .set-font-size (20px);
+    color: @set-color-white;
+  }
+
+  .main-navigation__link--active:before {
+    background-color: #ffffff;
   }
 }
