--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -7,7 +7,7 @@
   .list-reset();
 }
 
-@media (min-width: @table-width) {
+@media (min-width: @tablet-width) {
   .socials {
     height: auto;
     border-bottom: none;
