--- a/source/less/general.less
+++ b/source/less/general.less
@@ -47,10 +47,17 @@ body {
   background-color: #ffffff;
 }
 
-@media (min-width: @table-width) {
+@media (min-width: @tablet-width) {
   body {
-    width: @table-width;
+    width: @tablet-width;
     .set-font-size (16px);
     line-height: 24px;
   }
 }
+
+@media (min-width: @desktop-width) {
+  body {
+    width: @desktop-width;
+  }
+}
+
