--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -1,16 +1,21 @@
 .present {
-  .set-padding(35px, 20px, 35px, 20px);
-  .outline(green);
+  .set-padding(40px, 0, 9px, 0);
+  /*.outline(green);*/
 }
 
 .present-wrapper {
+  display: flex;
   height: 289px;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
+
 }
 
 .present__text {
+  width: 170px;
+  .set-margin(auto, auto, 43px, auto);
   .set-font-size(16px);
   color: @set-color-white;
   line-height: 20px;
+  text-align: center;
 }
