--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,5 +1,7 @@
 .button {
+  display: block;
   width: 100%;
+  .set-padding(10px, 20px, 10px, 20px);
   color: @set-color-white;
   line-height: 20px;
   background-color: @set-bg-green;
