--- a/source/less/blocks/catalog-additional.less
+++ b/source/less/blocks/catalog-additional.less
@@ -1,17 +1,51 @@
 .catalog-additional {
   .set-padding(25px, 20px, 25px, 20px);
-  .outline(violet);
+  /*.outline(violet);*/
+}
+
+.catalog-additional__title {
+  position: relative;
+  margin: 0;
+  .set-padding(2px, 0, 33px, 0);
+  border-bottom: 1px solid #cdcdcd;
+}
+
+.catalog-additional__title:after {
+  content: "";
+  position: absolute;
+  width: 53px;
+  height: 3px;
+  background-color: @set-bg-green;
+  right: -20px;
+  top: 15px;
 }
 
 .catalog-additional__list {
   .list-reset();
 }
 
+.catalog-additional__item {
+  .set-padding(15px, 0, 17px, 0);
+  border-bottom: 1px solid #cdcdcd;
+}
+
 .catalog-additional__item-title {
+  .set-margin(0, 0, 11px, 0);
   color: #222222;
   line-height: 16px;
 }
 
+.catalog-additional__info {
+  width: 100%;
+  border-collapse: collapse;
+  .set-margin(0, 0, 13px, 0);
+
+}
+
 .catalog-additional__cell {
   line-height: 14px;
+}
+
+.catalog-additional__cell:nth-child(2) {
+  text-align: right;
 }
