--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,7 +3,7 @@
   justify-content: space-between;
   min-height: 114px;
   .set-padding(30px, 20px, 15px, 20px);
-  .outline(yellow);
+  /*.outline(yellow);*/
 }
 
 .page-footer--catalog .contacts,
