--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -1,18 +1,26 @@
 .show-more {
+  width: 100%;
   .set-padding(25px, 20px, 25px, 20px);
-  .outline(orange);
+  /*.outline(orange);*/
 }
 
 .show-more__title {
+  width: 100%;
+  .set-margin(54px, 0, 8px, 0);
+  text-align: center;
   line-height: 20px;
 }
 
 .show-more__text {
+  width: 100%;
+  .set-margin(0, 0, 21px, 0);
+  text-align: center;
   .set-font-size(12px);
   line-height: 16px;
 }
 
 .show-more__button {
+  border: 0;
   color: #222222;
   background-color: @set-bg-grey;
 }
