--- a/source/less/blocks/main-navigation.less
+++ b/source/less/blocks/main-navigation.less
@@ -50,10 +50,13 @@
 
   .main-navigation__link {
     .set-font-size (20px);
+  }
+
+  .page-header--index .main-navigation__link {
     color: @set-color-white;
   }
 
-  .main-navigation__link--active:before {
+  .page-header--index .main-navigation__link--active:before {
     background-color: #ffffff;
   }
 }
