--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -30,6 +30,9 @@
     align-items: flex-end;
     min-height: 120px;
     .set-padding(10px, 110px, 10px, 110px);
-    background: linear-gradient(to left, @set-bg-green 50%, transparent 40%);
+
+    &--index {
+      background: linear-gradient(to left, @set-bg-green 50%, transparent 40%);
+    }
   }
 }
