--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -39,7 +39,6 @@
   background-color: @set-bg-green;
 }
 
-
 .catalog-main__info {
   border-collapse: collapse;
   width: 100%;
@@ -54,4 +53,82 @@
 
 .catalog-main__info-cell:nth-child(2) {
   text-align: right;
+}
+
+@media (min-width: @tablet-width) {
+  .catalog-main__title {
+    .set-margin(15px, 0, 0, 0);
+    .set-padding(15px, 30px, 24px, 30px);
+    border-bottom: none;
+  }
+
+  .catalog-main__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .catalog-main__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    width: calc(384px - 60px);
+    min-height: 571px;
+    .set-margin(0, 30px, 0, 30px);
+    .set-padding(40px, 38px, 38px, 38px);
+    border-bottom: none;
+    background: linear-gradient(to top, #f2f2f2 431px, transparent 431px);
+    /*.outline(orange);*/
+  }
+
+  .catalog-main__description {
+    width: 100%;
+  }
+
+  .catalog-main__item-title {
+    width: 130px;
+    .set-padding(21px, 0, 20px, 0);
+    .centerer();
+    text-align: center;
+  }
+
+  .catalog-main__image {
+    width: 200px;
+    height: 200px;
+  }
+
+  .catalog-main__info {
+    .set-margin(0, 0, 33px, 0);
+  }
+
+  .catalog-main__info-row {
+    border-bottom: 1px solid #cdcdcd;
+  }
+
+  .catalog-main__info-cell {
+    .set-font-size(16px);
+    line-height: 29px;
+  }
+
+  .catalog-main__button {
+    .set-font-size (16px);
+    line-height: 20px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog-main {
+    .set-padding(0, 70px, 0, 70px);
+  }
+
+  .catalog-main__title {
+    .set-margin(53px, 0, 0, 0);
+    .set-padding(15px, 40px, 24px, 40px);
+  }
+
+  .catalog-main__item {
+    width: 245px;
+    min-height: 572px;
+    .set-margin(0, 40px, 0, 40px);
+  }
 }
