--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -8,7 +8,6 @@
   height: 289px;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
-
 }
 
 .present__text {
@@ -18,4 +17,41 @@
   color: @set-color-white;
   line-height: 20px;
   text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .present {
+    .set-padding(69px, 0, 50px, 0);
+  }
+
+  .present-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    height: 200px;
+    background-image: none;
+    background: @set-bg-green;
+  }
+
+  .present__text {
+    text-align: left;
+    .set-margin(0, 115px, 0, 0);
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .present {
+    .set-padding(0, 0, 0, 0);
+  }
+
+  .present-wrapper {
+    width: 244px;
+    height: 289px;
+  }
+
+  .present__text {
+    .set-margin(auto, auto, 43px, auto);
+    text-align: center;
+  }
 }
