--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -63,6 +63,7 @@
   }
 
   .promo__button {
+    width: auto;
     margin-top: 0;
     .set-margin(0, 0, 0, 90px);
     .set-padding(17px, 27px, 17px, 27px);
