--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -4,6 +4,10 @@
   /*.outline(orange);*/
 }
 
+.show-more__wrapper {
+  .centerer();
+}
+
 .show-more__title {
   width: 100%;
   .set-margin(54px, 0, 8px, 0);
@@ -23,4 +27,46 @@
   border: 0;
   color: #222222;
   background-color: @set-bg-grey;
+}
+
+@media (min-width: @tablet-width) {
+  .show-more {
+    width: calc(384px - 60px);
+    .set-padding(0, 0, 0, 0);
+    background: none;
+  }
+
+  .show-more__wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    min-height: 432px;
+    .set-padding(40px, 38px, 37px, 38px);
+    border: 1px solid #e6e6e6;
+  }
+
+  .show-more__title {
+    width: 140px;
+    .set-margin(0, 0, 26px, 0);
+  }
+
+  .show-more__text {
+    width: 170px;
+    .set-font-size (16px);
+    line-height: 18px;
+    .set-margin(0, 0, 85px, 0);
+  }
+
+  .show-more__button {
+    .set-font-size (16px);
+    line-height: 20px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .show-more {
+    width: 245px;
+  }
 }
