--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,12 +1,132 @@
 .form {
-  .set-padding(25px, 20px, 25px, 20px);
-  .outline(black);
+  /*.outline(black);*/
+}
+
+.form__title {
+  .set-padding(15px, 20px, 0, 20px);
+  .set-margin(0, 0, 25px, 0);
+}
+
+.form__description {
+  .set-padding(0, 40px, 10px, 20px);
 }
 
 .form__group {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  .set-padding(15px, 20px, 10px, 20px);
   line-height: 18px;
+  border: 0;
+}
+
+.form__group--main,
+.form__group--program {
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.form__label {
+  display: flex;
+  align-items: center;
+  .set-margin(0, 0, 14px, 0);
+}
+
+.form__input {
+  flex-grow: 1;
+  height: 45px;
+  .set-padding(0, 15px, 0, 15px);
+}
+
+.form__group--main .form__input {
+  .set-margin(0, 0, 0, 15px);
+}
+
+.form__group--program {
+  .set-padding(25px, 20px, 1px, 20px);
+}
+
+.form__group--program .form__label {
+  .set-margin(0, 0, 25px, 0);
+}
+
+.form__group--program .form__program {
+  .set-margin(0, 32px, 0, 0);
+}
+
+.form__subtitle {
+  position: relative;
+  width: 100%;
+  .set-padding(28px, 0, 18px, 0);
+}
+
+.form__group--contacts .form__subtitle:after {
+  content: "";
+  position: absolute;
+  width: 99px;
+  height: 3px;
+  background-color: @set-bg-green;
+  right: -20px;
+  top: 43px;
+}
+
+.form__group--contacts .form__input {
+  .set-margin(0, 0, 0, 12px);
+}
+
+.form__group--comments .form__subtitle {
+  .set-padding(5px, 0, 20px, 0);
+}
+
+.form__group--comments .form__subtitle:after {
+  content: "";
+  position: absolute;
+  width: 158px;
+  height: 3px;
+  background-color: @set-bg-green;
+  right: -20px;
+  top: 18px;
+}
+
+.form__textarea {
+  width: 100%;
+  min-height: 150px;
+  .set-padding(12px, 12px, 12px, 13px);
+}
+
+.form__group--additional {
+  .set-padding(15px, 20px, 15px, 20px);
+}
+
+.form__group--additional .form__subtitle {
+  .set-padding(18px, 0, 25px, 0);
+}
+
+.form__group--additional .form__subtitle:after {
+  content: "";
+  position: absolute;
+  width: 136px;
+  height: 3px;
+  background-color: @set-bg-green;
+  right: -20px;
+  top: 31px;
+}
+
+.form__group--additional .form__label {
+  .set-margin(0, 0, 25px, 0);
+}
+
+.form__group--additional .form__checkbox {
+  .set-margin(0, 32px, 0, 0);
+}
+
+.form__button {
+  border: 0;
+  width: 280px;
+  .centerer();
 }
 
 .form__required {
+  .set-margin(20px, 0, 32px, 0);
   line-height: 16px;
+  text-align: center;
 }
