Сетки и микросетки формы в планшетной и десктопной версии

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,7 +3,7 @@
   justify-content: space-between;
   min-height: 114px;
   .set-padding(30px, 20px, 15px, 20px);
-  /*.outline(yellow);*/
+  .outline(yellow);
 }
 
 .page-footer--catalog .contacts,
@@ -48,9 +48,9 @@
 }
 
 @media (min-width: @desktop-width) {
-  .contacts {
+  .page-footer .contacts {
     .set-padding(65px, 75px, 58px, 75px);
-    background-color: @set-color-white;
+    background-color:#ffffff;
   }
 
   .contacts__adress {
