--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -2,7 +2,7 @@
   min-height: 236px;
   .set-padding(22px, 20px, 22px, 20px);
   background-color: @set-bg-grey;
-  /*.outline(red);*/
+  .outline(red);
 }
 
 .page-footer__company-name {
