--- a/source/less/blocks/catalog-additional.less
+++ b/source/less/blocks/catalog-additional.less
@@ -1,6 +1,6 @@
 .catalog-additional {
   .set-padding(25px, 20px, 25px, 20px);
-  /*.outline(violet);*/
+  .outline(violet);
 }
 
 .catalog-additional__title {
