--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,5 +1,5 @@
 .form {
-  /*.outline(black);*/
+  .outline(black);
 }
 
 .form__title {
@@ -129,4 +129,217 @@
   .set-margin(20px, 0, 32px, 0);
   line-height: 16px;
   text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .form__title {
+    .set-padding(30px, 30px, 0, 30px);
+    .set-margin(0, 0, 55px, 0);
+  }
+
+  .form__description {
+    width: 470px;
+    .set-padding(0, 70px, 10px, 70px);
+    .set-margin(0, 0, 42px, 0);
+    line-height: 30px;
+  }
+
+  .form__group {
+    .set-padding(15px, 66px, 10px, 71px);
+  }
+
+  .form__input {
+    height: 52px;
+  }
+
+  .form__label {
+    .set-margin(0, 0, 19px, 0);
+  }
+
+  .form__group--main .form__input {
+    .set-margin(0, 0, 0, 20px);
+  }
+
+  .form__group--main {
+    border-bottom: 0;
+    .set-margin(0, 0, 45px, 0);
+  }
+
+  .form__group--program {
+    .set-padding(34px, 66px, 0, 0);
+    .set-margin(0, 0, 45px, 71px);
+    border: 1px solid #e6e6e6;
+  }
+
+  .form__group--program .form__label {
+    .set-margin(0, 0, 35px, 0);
+  }
+
+  .form__group--program .form__program {
+    .set-margin(0, 73px, 0, 0);
+  }
+
+  .form__subtitle {
+    .set-margin(0, 0, 42px, 0);
+  }
+
+  .form__group--contacts {
+    .set-margin(0, 0, 30px, 0);
+  }
+
+  .form__group--contacts .form__label {
+    .set-margin(0, 0, 20px, 0);
+  }
+
+  .form__group--contacts .form__subtitle:after {
+    width: 145px;
+    right: -66px;
+    top: 53px;
+  }
+
+  .form__subtitle:before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: @set-bg-green;
+    left: -71px;
+    top: 53px;
+  }
+
+  .form__group--contacts .form__input {
+    .set-margin(0, 0, 0, 18px);
+  }
+
+  .form__group--comments {
+    .set-margin(0, 0, 38px, 0);
+  }
+
+  .form__group--comments .form__subtitle {
+    .set-margin(0, 0, 41px, 0);
+  }
+
+  .form__group--comments .form__subtitle:after {
+    width: 479px;
+    right: -66px;
+    top: 27px;
+  }
+
+  .form__group--comments .form__subtitle:before {
+    top: 28px;
+  }
+
+  .form__textarea {
+    min-height: 172px;
+    .set-padding(12px, 12px, 12px, 17px);
+  }
+
+  .form__group--additional {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .form__group--additional .form__label {
+    width: 50%;
+  }
+
+  .form__group--additional .form__subtitle:after {
+    width: 447px;
+    right: -66px;
+    top: 39px;
+  }
+
+  .form__group--additional .form__subtitle:before {
+    top: 41px;
+  }
+
+  .form__bottom {
+    display: flex;
+    align-items: center;
+    .set-margin(0, 66px, 72px, 71px);
+  }
+
+  .form__button {
+    .set-margin(0, 60px, 0, 0);
+    .set-padding(15px, 12px, 15px, 17px);
+  }
+
+  .form__required {
+    .set-margin(0, 0, 0, 0);
+    text-align: left;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__title {
+    .set-padding(68px, 110px, 0, 110px);
+    .set-margin(0, 0, 55px, 0);
+  }
+
+  .form__description {
+    width: 550px;
+    .set-padding(0, 110px, 10px, 110px);
+    .set-margin(0, 0, 56px, 0);
+  }
+
+  .form__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    .set-padding(0, 110px, 22px, 110px);
+  }
+
+  .form__group {
+    .set-padding(15px, 110px, 10px, 110px);
+  }
+
+  .form__group--main {
+    width: 568px;
+    .set-padding(0, 0, 0, 0);
+    .set-margin(0, 0, 0, 0);
+  }
+
+  .form__group--program {
+    width: 570px;
+    .set-margin(0, 0, 0, 0);
+    .set-padding(34px, 66px, 0, 0);
+  }
+
+  .form__group--contacts {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .form__group--contacts .form__label {
+    width: 50%;
+  }
+
+  .form__group--contacts .form__subtitle:after {
+    width: 777px;
+    right: -110px;
+  }
+
+  .form__subtitle:before {
+    width: 70px;
+    left: -110px;
+  }
+
+  .form__group--comments .form__subtitle:after {
+    width: 1111px;
+    right: -110px;
+  }
+
+  .form__group--additional .form__subtitle:after {
+    width: 1080px;
+    right: -110px;
+  }
+
+  .form__bottom {
+    .set-margin(0, 110px, 72px, 110px);
+  }
+
+  .form__button {
+    width: 568px;
+  }
 }
