--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -1,7 +1,7 @@
 .show-more {
   width: 100%;
   .set-padding(25px, 20px, 25px, 20px);
-  /*.outline(orange);*/
+  .outline(orange);
 }
 
 .show-more__wrapper {
