--- a/source/less/blocks/catalog-additional.less
+++ b/source/less/blocks/catalog-additional.less
@@ -10,7 +10,7 @@
   border-bottom: 1px solid #cdcdcd;
 }
 
-.catalog-additional__title:after {
+.catalog-additional__title::after {
   content: "";
   position: absolute;
   width: 53px;
@@ -59,14 +59,14 @@
     border: none;
   }
 
-  .catalog-additional__title:after {
+  .catalog-additional__title::after {
     width: 327px;
     height: 3px;
     right: -30px;
     top: 65px;
   }
 
-  .catalog-additional__title:before {
+  .catalog-additional__title::before {
     content: "";
     position: absolute;
     width: 29px;
@@ -129,13 +129,13 @@
     width: 100%;
   }
 
-  .catalog-additional__title:after {
+  .catalog-additional__title::after {
     width: 957px;
     top: 75px;
     right: -110px;
   }
 
-  .catalog-additional__title:before {
+  .catalog-additional__title::before {
     width: 70px;
     top: 75px;
     left: -110px;
@@ -185,7 +185,7 @@
   }
 
   .catalog-additional__cell:first-child,
-  .catalog-additional__cell:nth-child(2){
+  .catalog-additional__cell:nth-child(2) {
     text-align: left;
   }
 
