--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -17,7 +17,7 @@
   flex-wrap: wrap;
   .set-padding(0, 20px, 24px, 20px);
   border-bottom: 1px solid #e6e6e6;
-  /*.outline(blue);*/
+  .outline(blue);
 }
 
 .catalog-main__description {
@@ -45,8 +45,8 @@
 }
 
 .catalog-main__info-cell {
-  border: 0px;
-  border-image-width: 0px;
+  border: none;
+  border-image-width: none;
   .set-font-size(12px);
   line-height: 14px;
 }
