--- a/source/less/blocks/main-navigation.less
+++ b/source/less/blocks/main-navigation.less
@@ -32,7 +32,7 @@
     border-bottom: 0;
   }
 
-  .main-navigation__link--active:before {
+  .main-navigation__link--active::before {
     content: "";
     position: absolute;
     bottom: -8px;
@@ -56,7 +56,7 @@
     color: @set-color-white;
   }
 
-  .page-header--index .main-navigation__link--active:before {
+  .page-header--index .main-navigation__link--active::before {
     background-color: #ffffff;
   }
 }
