--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -59,7 +59,7 @@
   .set-padding(28px, 0, 18px, 0);
 }
 
-.form__group--contacts .form__subtitle:after {
+.form__group--contacts .form__subtitle::after {
   content: "";
   position: absolute;
   width: 99px;
@@ -77,7 +77,7 @@
   .set-padding(5px, 0, 20px, 0);
 }
 
-.form__group--comments .form__subtitle:after {
+.form__group--comments .form__subtitle::after {
   content: "";
   position: absolute;
   width: 158px;
@@ -101,7 +101,7 @@
   .set-padding(18px, 0, 25px, 0);
 }
 
-.form__group--additional .form__subtitle:after {
+.form__group--additional .form__subtitle::after {
   content: "";
   position: absolute;
   width: 136px;
@@ -191,13 +191,13 @@
     .set-margin(0, 0, 20px, 0);
   }
 
-  .form__group--contacts .form__subtitle:after {
+  .form__group--contacts .form__subtitle::after {
     width: 145px;
     right: -66px;
     top: 53px;
   }
 
-  .form__subtitle:before {
+  .form__subtitle::before {
     content: "";
     position: absolute;
     width: 30px;
@@ -219,13 +219,13 @@
     .set-margin(0, 0, 41px, 0);
   }
 
-  .form__group--comments .form__subtitle:after {
+  .form__group--comments .form__subtitle::after {
     width: 479px;
     right: -66px;
     top: 27px;
   }
 
-  .form__group--comments .form__subtitle:before {
+  .form__group--comments .form__subtitle::before {
     top: 28px;
   }
 
@@ -244,13 +244,13 @@
     width: 50%;
   }
 
-  .form__group--additional .form__subtitle:after {
+  .form__group--additional .form__subtitle::after {
     width: 447px;
     right: -66px;
     top: 39px;
   }
 
-  .form__group--additional .form__subtitle:before {
+  .form__group--additional .form__subtitle::before {
     top: 41px;
   }
 
@@ -315,22 +315,22 @@
     width: 50%;
   }
 
-  .form__group--contacts .form__subtitle:after {
+  .form__group--contacts .form__subtitle::after {
     width: 777px;
     right: -110px;
   }
 
-  .form__subtitle:before {
+  .form__subtitle::before {
     width: 70px;
     left: -110px;
   }
 
-  .form__group--comments .form__subtitle:after {
+  .form__group--comments .form__subtitle::after {
     width: 1111px;
     right: -110px;
   }
 
-  .form__group--additional .form__subtitle:after {
+  .form__group--additional .form__subtitle::after {
     width: 1080px;
     right: -110px;
   }
