--- a/source/less/blocks/process.less
+++ b/source/less/blocks/process.less
@@ -19,11 +19,11 @@
   .set-margin(0, 0, 26px, 0);
 }
 
-.process__item:before {
+.process__item::before {
   content: "";
   position: absolute;
   top: -2px;
-  left: 0px;
+  left: 1px;
   width: 60px;
   height: 60px;
   background-color: @set-bg-green;
@@ -37,7 +37,7 @@
   .process {
     min-height: 780px;
     .set-padding(48px, 30px, 18px, 30px);
-    border-bottom: 1px solid #e6e6e6
+    border-bottom: 1px solid #e6e6e6;
   }
 
   .process__title {
@@ -66,9 +66,9 @@
     }
   }
 
-  .process__item:before {
-    top: 0px;
-    left: 0px;
+  .process__item::before {
+    top: 1px;
+    left: 1px;
     width: 80px;
     height: 80px;
   }
