--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -1,7 +1,3 @@
-.catalog-main {
-  .outline(red);
-}
-
 .catalog-main__title {
   margin: 0;
   .set-padding(15px, 20px, 28px, 20px);
@@ -17,7 +13,6 @@
   flex-wrap: wrap;
   .set-padding(0, 20px, 24px, 20px);
   border-bottom: 1px solid #e6e6e6;
-  .outline(blue);
 }
 
 .catalog-main__description {
@@ -51,7 +46,7 @@
   line-height: 14px;
 }
 
-.catalog-main__info-cell:nth-child(2) {
+.catalog-main__info-cell--second {
   text-align: right;
 }
 
@@ -78,7 +73,6 @@
     .set-padding(40px, 38px, 38px, 38px);
     border-bottom: none;
     background: linear-gradient(to top, #f2f2f2 431px, transparent 431px);
-    /*.outline(orange);*/
   }
 
   .catalog-main__description {
