--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,7 +1,3 @@
-.form {
-  .outline(black);
-}
-
 .form__title {
   .set-padding(15px, 20px, 0, 20px);
   .set-margin(0, 0, 25px, 0);
@@ -37,6 +33,14 @@
   .set-padding(0, 15px, 0, 15px);
 }
 
+.form__input--weight::-webkit-inner-spin-button,
+.form__input--weight::-webkit-outer-spin-button,
+.form__input--age::-webkit-inner-spin-button,
+.form__input--age::-webkit-outer-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
 .form__group--main .form__input {
   .set-margin(0, 0, 0, 15px);
 }
@@ -56,7 +60,8 @@
 .form__subtitle {
   position: relative;
   width: 100%;
-  .set-padding(28px, 0, 18px, 0);
+  .set-padding(12px, 0, 34px, 0);
+  flex-shrink: 0;
 }
 
 .form__group--contacts .form__subtitle::after {
@@ -66,15 +71,19 @@
   height: 3px;
   background-color: @set-bg-green;
   right: -20px;
-  top: 43px;
+  top: 26px;
 }
 
 .form__group--contacts .form__input {
   .set-margin(0, 0, 0, 12px);
 }
 
+.form__group--comments {
+  .set-padding(0px, 20px, 10px, 20px);
+}
+
 .form__group--comments .form__subtitle {
-  .set-padding(5px, 0, 20px, 0);
+  .set-padding(5px, 0, 35px, 0);
 }
 
 .form__group--comments .form__subtitle::after {
@@ -91,14 +100,15 @@
   width: 100%;
   min-height: 150px;
   .set-padding(12px, 12px, 12px, 13px);
+  resize: none;
 }
 
 .form__group--additional {
-  .set-padding(15px, 20px, 15px, 20px);
+  .set-padding(0, 20px, 15px, 20px);
 }
 
 .form__group--additional .form__subtitle {
-  .set-padding(18px, 0, 25px, 0);
+  .set-padding(18px, 0, 40px, 0);
 }
 
 .form__group--additional .form__subtitle::after {
@@ -167,7 +177,7 @@
 
   .form__group--program {
     .set-padding(34px, 66px, 0, 0);
-    .set-margin(0, 0, 45px, 71px);
+    .set-margin(0, 0, 47px, 71px);
     border: 1px solid #e6e6e6;
   }
 
@@ -176,7 +186,7 @@
   }
 
   .form__group--program .form__program {
-    .set-margin(0, 73px, 0, 0);
+    .set-margin(0, 72px, 0, 0);
   }
 
   .form__subtitle {
@@ -184,7 +194,7 @@
   }
 
   .form__group--contacts {
-    .set-margin(0, 0, 30px, 0);
+    .set-margin(0, 0, 13px, 0);
   }
 
   .form__group--contacts .form__label {
@@ -194,7 +204,7 @@
   .form__group--contacts .form__subtitle::after {
     width: 145px;
     right: -66px;
-    top: 53px;
+    top: 36px;
   }
 
   .form__subtitle::before {
@@ -204,7 +214,7 @@
     height: 3px;
     background-color: @set-bg-green;
     left: -71px;
-    top: 53px;
+    top: 36px;
   }
 
   .form__group--contacts .form__input {
@@ -212,7 +222,7 @@
   }
 
   .form__group--comments {
-    .set-margin(0, 0, 38px, 0);
+    .set-margin(0, 0, 22px, 0);
   }
 
   .form__group--comments .form__subtitle {
@@ -222,7 +232,7 @@
   .form__group--comments .form__subtitle::after {
     width: 479px;
     right: -66px;
-    top: 27px;
+    top: 28px;
   }
 
   .form__group--comments .form__subtitle::before {
@@ -235,19 +245,24 @@
   }
 
   .form__group--additional {
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    .set-padding(15px, 66px, 12px, 71px);
   }
 
   .form__group--additional .form__label {
     width: 50%;
+    .set-padding(0, 0, 28px, 13px);
+  }
+
+  .form__group--additional .form__subtitle {
+    .set-margin(0, 0, 27px, 0);
   }
 
   .form__group--additional .form__subtitle::after {
     width: 447px;
     right: -66px;
-    top: 39px;
+    top: 41px;
   }
 
   .form__group--additional .form__subtitle::before {
@@ -261,8 +276,9 @@
   }
 
   .form__button {
-    .set-margin(0, 60px, 0, 0);
-    .set-padding(15px, 12px, 15px, 17px);
+    width: 282px;
+    .set-margin(0, 63px, 0, 0);
+    .set-padding(16px, 16px, 16px, 16px);
   }
 
   .form__required {
@@ -287,7 +303,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    .set-padding(0, 110px, 22px, 110px);
+    .set-padding(0, 110px, 23px, 110px);
   }
 
   .form__group {
@@ -309,10 +325,13 @@
   .form__group--contacts {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .set-margin(0, 0, 15px, 0);
   }
 
   .form__group--contacts .form__label {
-    width: 50%;
+    width: 47%;
   }
 
   .form__group--contacts .form__subtitle::after {
@@ -325,9 +344,22 @@
     left: -110px;
   }
 
+  .form__group--comments {
+    .set-margin(0, 0, 23px, 0);
+  }
+
   .form__group--comments .form__subtitle::after {
     width: 1111px;
     right: -110px;
+  }
+
+  .form__textarea {
+    min-height: 173px;
+    .set-padding(13px, 12px, 13px, 17px);
+  }
+
+  .form__group--additional {
+    .set-margin(0, 0, 10px, 0);
   }
 
   .form__group--additional .form__subtitle::after {
@@ -335,11 +367,17 @@
     right: -110px;
   }
 
+  .form__group--additional .form__label {
+    width: 25%;
+    .set-padding(0, 0, 28px, 13px);
+  }
+
   .form__bottom {
-    .set-margin(0, 110px, 72px, 110px);
+    .set-margin(0, 110px, 82px, 110px);
   }
 
   .form__button {
+    .set-margin(0, 85px, 0, 0);
     width: 568px;
   }
 }
