--- a/source/less/blocks/process.less
+++ b/source/less/blocks/process.less
@@ -1,6 +1,5 @@
 .process {
   .set-padding(0px, 20px, 18px, 20px);
-  .outline(pink);
 }
 
 .process__title {
@@ -23,7 +22,7 @@
   content: "";
   position: absolute;
   top: -2px;
-  left: 1px;
+  left: 0;
   width: 60px;
   height: 60px;
   background-color: @set-bg-green;
@@ -67,8 +66,8 @@
   }
 
   .process__item::before {
-    top: 1px;
-    left: 1px;
+    top: 0;
+    left: 0;
     width: 80px;
     height: 80px;
   }
