Состояния по стайлгайду, кастомные чекбоксы и радиобаттоны

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -7,3 +7,12 @@
   background-color: @set-bg-green;
   text-align: center;
 }
+
+.button:hover {
+  background-color: #5eaa2f;
+}
+
+.button:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #5eaa2f;
+}
