--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -43,6 +43,10 @@
   line-height: 16px;
 }
 
+.programs__catalog-link:active {
+  opacity: 0.3;
+}
+
 @media (min-width: @tablet-width) {
   .programs {
     .set-padding(0, 30px, 0, 30px);
