--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -28,6 +28,15 @@
   background-color: @set-bg-grey;
 }
 
+.show-more__button:hover {
+  background-color: #ebebeb;
+}
+
+.show-more__button:active {
+  color: rgba(0, 0, 0, 0.3);
+  background-color: #ebebeb;
+}
+
 @media (min-width: @tablet-width) {
   .show-more {
     width: calc(384px - 60px);
