--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,9 +1,14 @@
 .example {
+  background: @set-bg-grey;
+}
+
+.example__wrapper {
+  width: @mobile-width;
+  .centerer();
   display: flex;
   flex-direction: column;
   min-height: 705px; /*временно, потом убрать*/
   .set-padding(18px, 20px, 22px, 20px);
-  background: @set-bg-grey;
 }
 
 .example__column {
@@ -68,10 +73,15 @@
 
 @media (min-width: @tablet-width) {
   .example {
-    min-height: 1080px;
-    .set-padding(43px, 30px, 0, 30px);
     background: linear-gradient(to bottom, #ffffff 57%, transparent 57%),
       linear-gradient(to left, #eaeaea 50%, #f2f2f2 50%);
+    border-top: 1px solid #e6e6e6;
+  }
+
+  .example__wrapper {
+    width: @tablet-width;
+    min-height: 1080px;
+    .set-padding(43px, 30px, 0, 30px);
   }
 
   .example__title {
@@ -118,10 +128,16 @@
 
 @media (min-width: @desktop-width) {
   .example {
+    background: linear-gradient(to bottom, #ffffff 29%, transparent 29%),
+      linear-gradient(to left, #eaeaea 50%, #f2f2f2 50%);
+  }
+
+  .example__wrapper {
+    width: @desktop-width;
     display: flex;
     flex-direction: row;
     min-height: 650px;
-    .set-padding(0, 110px, 0, 110px);
+    .set-padding(0, 40px, 0, 40px);
     background: linear-gradient(to bottom, #ffffff 29%, transparent 29%),
       linear-gradient(to left, #eaeaea 395px, #f2f2f2 395px);
   }
