--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -7,6 +7,7 @@
   height: 364px;
   background-image: url("../img/map-background.jpg");
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 @media (min-width: @tablet-width) {
