--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,7 +1,12 @@
 .page-footer__bottom {
+  background-color: @set-bg-grey;
+}
+
+.page-footer__bottom-wrapper {
+  width: @mobile-width;
+  .centerer();
   min-height: 236px;
   .set-padding(22px, 20px, 22px, 20px);
-  background-color: @set-bg-grey;
 }
 
 .page-footer__company-name {
@@ -12,7 +17,8 @@
 }
 
 @media (min-width: @tablet-width) {
-  .page-footer__bottom {
+  .page-footer__bottom-wrapper {
+    width: @tablet-width;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,6 +36,10 @@
 @media (min-width: @desktop-width) {
   .page-footer {
     position: relative;
+  }
+
+  .page-footer__bottom-wrapper {
+    width: @desktop-width;
   }
 
   .page-footer__contacts {
