--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import "mixins.less";
 @import "general.less";
 @import "blocks/text.less";
+@import "blocks/index-wrapper.less";
 @import "blocks/button.less";
 @import "blocks/page-header.less";
 @import "blocks/main-navigation.less";
