--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -1,7 +1,11 @@
-.catalog-main__title {
-  margin: 0;
-  .set-padding(15px, 20px, 28px, 20px);
+.catalog-main__title-wrapper {
   border-bottom: 1px solid #e6e6e6;
+}
+
+.catalog-main__title {
+  width: @mobile-width;
+  .centerer();
+  .set-padding(15px, 20px, 28px, 20px);
 }
 
 .catalog-main__list {
@@ -9,10 +13,15 @@
 }
 
 .catalog-main__item {
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.catalog-main__item-wrapper {
+  width: @mobile-width;
+  .centerer();
   display: flex;
   flex-wrap: wrap;
   .set-padding(0, 20px, 24px, 20px);
-  border-bottom: 1px solid #e6e6e6;
 }
 
 .catalog-main__description {
@@ -51,18 +60,28 @@
 }
 
 @media (min-width: @tablet-width) {
-  .catalog-main__title {
-    .set-margin(15px, 0, 0, 0);
-    .set-padding(15px, 30px, 24px, 30px);
+  .catalog-main__title-wrapper {
     border-bottom: none;
   }
 
+  .catalog-main__title {
+    width: @tablet-width;
+    .set-margin(15px, auto, 0, auto);
+    .set-padding(15px, 30px, 24px, 30px);
+  }
+
   .catalog-main__list {
+    width: @tablet-width;
+    .centerer();
     display: flex;
     flex-wrap: wrap;
   }
 
   .catalog-main__item {
+    border-bottom: none;
+  }
+
+  .catalog-main__item-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,7 +90,6 @@
     min-height: 571px;
     .set-margin(0, 30px, 0, 30px);
     .set-padding(40px, 38px, 38px, 38px);
-    border-bottom: none;
     background: linear-gradient(to top, #f2f2f2 431px, transparent 431px);
   }
 
@@ -112,15 +130,20 @@
 
 @media (min-width: @desktop-width) {
   .catalog-main {
-    .set-padding(0, 70px, 0, 70px);
+    .set-padding(0, 40px, 0, 40px);
   }
 
   .catalog-main__title {
-    .set-margin(53px, 0, 0, 0);
+    width: @desktop-width;
+    .set-margin(53px, auto, 0, auto);
     .set-padding(15px, 40px, 24px, 40px);
   }
 
-  .catalog-main__item {
+  .catalog-main__list {
+    width: @desktop-width;
+  }
+
+  .catalog-main__item-wrapper {
     width: 245px;
     min-height: 572px;
     .set-margin(0, 40px, 0, 40px);
