--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,3 +1,8 @@
+.form {
+  width: @mobile-width;
+  .centerer();
+}
+
 .form__title {
   .set-padding(15px, 20px, 0, 20px);
   .set-margin(0, 0, 25px, 0);
@@ -239,6 +244,11 @@
 }
 
 @media (min-width: @tablet-width) {
+  .form {
+    width: @tablet-width;
+    .centerer();
+  }
+
   .form__title {
     .set-padding(30px, 30px, 0, 30px);
     .set-margin(0, 0, 55px, 0);
@@ -273,8 +283,8 @@
   }
 
   .form__group--program {
-    .set-padding(23px, 66px, 10px, 26px);
-    .set-margin(0, 0, 47px, 71px);
+    .set-padding(23px, 0, 10px, 26px);
+    .set-margin(0, 66px, 47px, 71px);
     border: 1px solid #e6e6e6;
   }
 
@@ -416,14 +426,19 @@
 }
 
 @media (min-width: @desktop-width) {
+  .form {
+    width: @desktop-width;
+    .centerer();
+  }
+
   .form__title {
-    .set-padding(68px, 110px, 0, 110px);
+    .set-padding(68px, 40px, 0, 40px);
     .set-margin(0, 0, 55px, 0);
   }
 
   .form__description {
     width: 550px;
-    .set-padding(0, 110px, 10px, 110px);
+    .set-padding(0, 40px, 10px, 40px);
     .set-margin(0, 0, 57px, 0);
   }
 
@@ -431,11 +446,11 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    .set-padding(0, 110px, 23px, 110px);
+    .set-padding(0, 40px, 23px, 40px);
   }
 
   .form__group {
-    .set-padding(15px, 110px, 10px, 110px);
+    .set-padding(15px, 40px, 10px, 40px);
   }
 
   .form__group--main {
@@ -505,7 +520,7 @@
   }
 
   .form__bottom {
-    .set-margin(0, 110px, 82px, 110px);
+    .set-margin(0, 40px, 82px, 40px);
   }
 
   .form__button {
