--- a/source/less/blocks/process.less
+++ b/source/less/blocks/process.less
@@ -1,4 +1,6 @@
 .process {
+  width: @mobile-width;
+  .centerer();
   .set-padding(0px, 20px, 18px, 20px);
 }
 
@@ -34,9 +36,9 @@
 
 @media (min-width: @tablet-width) {
   .process {
+    width: @tablet-width;
     min-height: 780px;
     .set-padding(48px, 30px, 18px, 30px);
-    border-bottom: 1px solid #e6e6e6;
   }
 
   .process__title {
@@ -95,8 +97,9 @@
 
 @media (min-width: @desktop-width) {
   .process {
+    width: @desktop-width;
     min-height: 450px;
-    .set-padding(78px, 110px, 8px, 110px);
+    .set-padding(78px, 40px, 8px, 40px);
     border-bottom: none;
   }
 
