--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,7 +1,12 @@
 .promo {
+  background: linear-gradient(to bottom, #65a93c 306px, transparent 306px);
+}
+
+.promo__wrapper {
+  width: @mobile-width;
+  .centerer();
   display: flex;
   flex-direction: column;
-  width: 100%;
   min-height: 480px;
   .set-padding(0, 20px, 0, 20px);
   background-image: url("../img/index-background-mobile@1x.jpg");
@@ -33,6 +38,12 @@
 
 @media (min-width: @tablet-width) {
   .promo {
+    background: none;
+  }
+
+  .promo__wrapper {
+    width: @tablet-width;
+    .centerer();
     align-items: flex-start;
     min-height: 840px;
     .set-padding(0, 30px, 0, 30px);
@@ -61,7 +72,7 @@
   }
 
   .promo__button {
-    width: auto;
+    width: 245px;
     margin-top: 0;
     .set-margin(0, 0, 0, 90px);
     .set-padding(17px, 27px, 17px, 27px);
@@ -70,19 +81,20 @@
 }
 
 @media (min-width: @desktop-width) {
-  .promo {
+  .promo__wrapper {
+    width: @desktop-width;
     min-height: 655px;
   }
 
   .promo__title {
-    .set-margin(102px, 0, 42px, 160px);
+    .set-margin(102px, 0, 42px, 90px);
   }
 
   .promo__slogan {
-    .set-margin(0, 0, 51px, 160px);
+    .set-margin(0, 0, 51px, 90px);
   }
 
   .promo__button {
-    .set-margin(0, 0, 0, 160px);
+    .set-margin(0, 0, 0, 90px);
   }
 }
