--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -1,10 +1,7 @@
-.show-more {
-  width: 100%;
-  .set-padding(25px, 20px, 25px, 20px);
-}
-
 .show-more__wrapper {
+  width: @mobile-width;
   .centerer();
+  .set-padding(25px, 20px, 25px, 20px);
 }
 
 .show-more__title {
@@ -39,8 +36,13 @@
 
 @media (min-width: @tablet-width) {
   .show-more {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
     width: calc(384px - 60px);
-    .set-padding(0, 0, 0, 0);
+    min-height: 571px;
+    .set-margin(0, 30px, 0, 30px);
     background: none;
   }
 
